# secretagent

./: .gitignore  .root-sentinel.txt  CLAUDE.md  DATASETS.md  Makefile  PLANS.md  README.md  TODO.md  cross_summary.md  demo.py  learning_tables_notes.txt  llm_util.py  pyproject.toml  quickstart.py  run_all_strategies.sh  secretagent.py  trial.py
benchmarks/: HOWTO.md  plot_results.py  run_bbh_class1_val.sh  run_class1_codedistill.sh  run_class1_v4_full_codedistill.sh  run_class2_v2_workflow_distill.sh  run_class2_v4_full_workflow.sh  run_class2_workflow_distill.sh  run_class3_v4_full.sh  run_final.sh  run_full_size_baseline_record.sh  run_full_size_val_eval.sh
benchmarks/COMMON/: master_table.md
benchmarks/codedistill_logs_v2/: musr_class3v2_synth.yaml  musr_class3v4_synth.yaml
benchmarks/designbench/: Makefile  README.md  (+5 more)
docs/: CLI.md  CONFIG_KEYS.md  EXPERIMENTS.md  FINDINGS.md  code_distillation_results_v2.md  code_distillation_results_v2_gemini.md  medcalc_benchmark_results_report.md  medcalc_induction_report.md  next_session_prompt.md  optimizer.md  orchestration_learner_sweep_curves.html  orchestration_learner_sweep_results.md  presentation_prompt.md
examples/: game.py  pyramid.json  pyramid.yaml  pyramid_data.py  pyramid_game.py  quickstart.py  sports_understanding.py  sports_understanding_pot.py  sports_understanding_pydantic.py  test.py  test_boolean_fix.py  test_type_parsing.py  test_yaml.py
prompts/: program_trace_prompt.txt
scripts/: Makefile  benchmark_config.py  benchmark_status.py  hero_table.py  learning_table.py  optimize_plot.py  run_all_strategies.sh  together_ai_costs_by_key.py  total_llm_cost.py
secretagent/: config.py
tests/: conftest.py  test_cache_merge.py  test_cache_util.py  test_config.py  test_config_extras.py  test_core.py  test_dataset.py  test_evaluate.py  test_expt.py  test_implement_learn.py  test_llm_util.py  test_model_info.py  test_orchestrate_learner.py  test_orchestration_provenance.py  test_pot.py  test_profiler.py  test_ptool.py  test_pydantic_impl.py  test_quickstart.py  test_record.py  test_resolve_tools.py  test_results_cli.py  test_savefile.py  test_sports_understanding.py  test_transforms.py
(+8499 files in other folders)
