[project]
name = "secretagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.81.15",
    "pydantic-ai>=1.63.0",
    "pydantic-ai-litellm>=0.2.3",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
