[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secretagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "cachier>=4.1.0",
    "datasets>=4.8.3",
    "deap>=1.4.3",
    "clip",
    "litellm>=1.81.15",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "openai>=2.23.0",
    "openai-clip>=1.0.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic-ai>=1.63.0",
    "pydantic-ai-litellm>=0.2.3",
    "pydantic-evals>=1.63.0",
    "pytest>=9.0.2",
    "retry>=0.9.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "selenium>=4.41.0",
    "smolagents>=1.22.0",
    "together>=2.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secretagent = ["prompt_templates/*.txt", "orchestrate/prompt_templates/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.6",
    "types-pyyaml>=6.0.12.20250915",
]
